# myadb

./: CMakeLists.txt  LICENSE  README.md
ext/adb/: CMakeLists.txt  adb.cpp  adb.h  adb_auth_host.cpp  adb_client.cpp  adb_io.cpp  adb_io.h  adb_trace.h  adb_utils.cpp  bugreport.cpp  bugreport.h  centraldir.cpp  commandline.cpp  console.cpp  errors_windows.cpp  fdevent.cpp  file.cpp  file_sync_client.cpp  file_sync_service.h  getopt.cpp  private.h  services.cpp  services.h  shell_service.cpp  sockets.cpp  stdafx.h  strings.cpp  sysdeps.h  sysdeps_win32.cpp  transport.cpp  transport.h  transport_local.cpp  usb_vendors.cpp  usb_windows.cpp  utf8.cpp  utils.cpp  utils.h
ext/adb/sysdeps/win32/: stat.cpp
ext/adbdevdetect/AdbWinApi/: adb_api_instance.h
ext/adbdevdetect/AdbWinUsbApi/: adb_winusb_endpoint_object.h  adb_winusb_interface.h  adb_winusb_io_completion.h
include/android-base/: logging.h  parseint.h  stringprintf.h  unique_fd.h
include/cutils/: sockets.h
include/zlib/projects/MSVC2010/: zlib.vcxproj
lib/Debug/: libeay32.lib  myadb.exp  myadb.lib  ssleay32.lib  zlib.lib
lib/Release/: adbdevdetect.lib  getopt.lib  myadb.exp  myadb.lib
